# bedrock-claude-chat

./: .gitignore  AGENT.md  README.md  README_ja.md  bin.sh  deploy.yml  index.html  lefthook.yml  package-lock.json
.github/: CODEOWNERS
.github/workflows/: update-contributor-highlights.yml
backend/: Dockerfile  README.md  embedding.Dockerfile  highlights.py  lambda.Dockerfile  lefthook.yml  pyproject.toml
backend/app/: bedrock.py  bot_remove.py  config.py  dependencies.py  guardrails.py  langfuse.py  main.py  prompt.py  stream.py  utils.py  vector_search.py  websocket.py
backend/app/agents/: agent.py  langchain.py  utils.py
backend/app/repositories/: common.py  (+3 more)
backend/embedding/: Dockerfile  main.py  pyproject.toml
backend/embedding_statemachine/pdf_ai_ocr/images/docker/pdf_to_image/: Dockerfile  pyproject.toml
backend/embedding_statemachine/pdf_ai_ocr/images/docker/task1/: Dockerfile  pyproject.toml  requirements.txt
backend/tests/: test_bedrock.py
cdk/: cdk.json  package-lock.json  package.json
cdk/lib/: api-publishment-stack.ts  bedrock-chat-stack.ts  bedrock-custom-bot-stack.ts  bedrock-knowledge-base-stack.ts  bedrock-region-resources.ts  frontend-waf-stack.ts
cdk/test/: cdk.test.ts
docs/: AGENT.md  LOCAL_DEVELOPMENT.md  README_ja.md
docs/migration/: V1_TO_V2.md
frontend/: .env.template  .eslintrc.cjs  index.html  lefthook.yml  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/.ladle/: config.mjs
frontend/src/: App.tsx  authConfig.ts  index.css  main.tsx  routes.tsx  vite-env.d.ts
migration/: V1_TO_V2.md
(+185 files in other folders)
