[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
boto3 = "^1.28.57"
anthropic = {version = "^0.31.0", extras = ["bedrock"]}
aws-lambda-powertools = "^2.1.0"
pdf2image = "^1.17.0"
pyhumps = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
